--- a/FileManager/res/values-ar/strings.xml
+++ b/FileManager/res/values-ar/strings.xml
@@ -15,24 +15,10 @@
  * limitations under the License.
  -->
 <resources>
-	<!-- ***************************
-	     About information
-	     *************************** -->
+		<string name="about_translators">Launchpad Contributions: OpenIntents devs https://launchpad.net/~openintents-devs
+kenn dhia https://launchpad.net/~kendhia mahmood saqba</string>
 	
-	<!-- Automatically filled in by Launchpad: -->
-	<string name="about_translators">Launchpad Contributions:
-  OpenIntents devs https://launchpad.net/~openintents-devs
-  kenn dhia https://launchpad.net/~kendhia
-  	mahmood saqba
-  </string>
-	
-    <!-- Short explanation of the application (max. 80 characters) -->
-    <string name="about_comments">ادارة الملفات على بطاقة SD باستعمال مدير المفات .OI</string>  
-	
-	<!-- ***************************
-	     Applicatio-specific strings
-	     *************************** -->
-	<!-- Name of application. Can be localized. OI = OpenIntents should stay unmodified. -->
+       <string name="about_comments">ادارة الملفات على بطاقة SD باستعمال مدير المفات .OI</string>  
     <string name="app_name">مدير الملفات OI</string>
     
     <string name="menu_delete">حذف</string>
@@ -57,13 +43,11 @@
     <string name="warning_some_may_not_work">مجموعة من هته الخيارات قد لا تعمل</string>
     <string name="show_warning_again">اظهار التحذير مرة أخرى</string>
     
-    <!-- Strings for a multi select feature -->
 	<string name="really_delete_multiselect">هل أنت متأكد من رغبتك في حذف الملفات %d؟</string>
 
     <string name="multiselect_title">اختر ملفات متعددة</string>
     <string name="pick_title">File picker</string>
-    
-    <!-- Strings for details table -->
+   
     <string name="details_type">النوع</string>
     <string name="details_type_folder">المجلد</string>
     <string name="details_type_file">الملف</string>
@@ -75,10 +59,7 @@
     <string name="details_yes">نعم</string>
     <string name="details_no">لا</string>
     
-    <!-- Construct a unique file name of a file called %s. -->
     <string name="copied_file_name">انسخ من %s</string>
-    
-    <!-- Construct a unique file name with number %1$d of a file called %2$s. -->
     <string name="copied_file_name_2">انسخ  %1$d من %2$s</string>
     
     <string name="media_scan_included">هذا المجلد سيكون مدرجا في فحص ميديا التالي</string>
@@ -91,13 +72,8 @@
     
     <string name="application_not_available">التطبيق غير متوفر.</string>
     
-	<!-- ***************************
-	     Preferences
-	     *************************** -->
-    <!-- Menu item for Settings -->
 	<string name="settings">الاعدادات</string>
 	
-    <!-- Category for preferences. -->
     <string name="preference_advanced_features">مزايا متقدمة</string>
 	<string name="preference_mediascan_title">استبعاد من فحص الميديا</string>
     <string name="preference_mediascan_summary_on">اظهار قائمة العناصر لاستبعاد المجلدات من فحص الميديا التالي.</string>
@@ -122,17 +98,10 @@
         <item>آخر تعديل</item>
     </string-array>
 
-        
-    <!-- ***************************
-   		 Strings for the \'Save as\' feature
-    	 *************************** -->
     <string name="saveas_no_file_picked">لم تختر أي ملف.</string>
     <string name="saveas_error">حدث خطأ.</string>
     <string name="saveas_file_saved">تم حفظ الملف بنجاح.</string>
-    
-    <!-- ***************************
-             Strings for the \'Compressing\' and \'Extracting\' feature
-          *************************** -->
+
     <string name="compressing_success">ظغط العنصر بنجاح</string>
     <string name="compressing_error">لا يمكن ظغط العنصر</string>
     <string name="extracting_success">فك ظغط العنصر بنجاح</string>
@@ -140,7 +109,6 @@
     <string name="extracting">Extracting…</string>
     <string name="compressing">Compressing…</string>
     
-    <!-- new menu strings -->
     <string name="menu_bookmarks">المفضلات</string>
     <string name="menu_search">بحث</string>
     <string name="menu_create_folder">مجلد جديد</string>
@@ -154,7 +122,6 @@
     <string name="menu_check_all">Check all</string>
     <string name="menu_uncheck_all">Uncheck all</string>
     
-    <!-- Multi selection action strings -->
     <string name="selected">العناصر المحددة</string>
     <string name="no_selection">No items checked</string>
     
@@ -163,7 +130,6 @@
     <string name="bookmark_already_exists">هذا الملف فضل مسبقا</string>
     <string name="bookmarks">المفضلات</string>
     
-    <!-- Search related -->
     <string name="search_hint">Search files</string>
     <string name="query_error">Query error</string>
     <string name="search_settings_descr">Files and folders in storage</string>
@@ -172,13 +138,9 @@
     <string name="preference_search_dialog_message">Clear search history?</string>
     <string name="search_history_cleared">Search history cleared</string>
     
-    <!-- icon content description -->
     <string name="item_icon">Item icon</string>
-    
-    <!-- list layout -->
     <string name="file_scanning">Scanning…</string>
     
-    <!-- Dialogs -->
     <string name="delete_success">Successfully deleted</string>
     <string name="delete_failure">Some files not deleted</string>
     <string name="deleting">Deleting…</string>
@@ -192,8 +154,6 @@
     <string name="overwrite_question">Overwrite old file?</string>
     
     <string name="directory_pick">Select current directory</string>
-    
-    <!-- CopyHelper statuses -->
     <string name="copying">Copying…</string>
     <string name="copied">Successfully copied</string>
     <string name="copy_error">Some or all items couldn\'t be copied!</string>
