--- a/FileManager/res/values-zh-rCN/strings.xml
+++ b/FileManager/res/values-zh-rCN/strings.xml
@@ -15,24 +15,15 @@
  * limitations under the License.
  -->
 <resources>
-	<!-- ***************************
-	     About information
-	     *************************** -->
-	
-	<!-- Automatically filled in by Launchpad: -->
+
 	<string name="about_translators">Launchpad Contributions:
   Li Shiyi https://launchpad.net/~li3shiyi
   OpenIntents devs https://launchpad.net/~openintents-devs
   Swandle https://launchpad.net/~swandle
   zhangchun https://launchpad.net/~zhangchun</string>
 	
-    <!-- Short explanation of the application (max. 80 characters) -->
     <string name="about_comments">OI文件管理器用来管理SD卡上的文件。</string>  
 	
-	<!-- ***************************
-	     Applicatio-specific strings
-	     *************************** -->
-	<!-- Name of application. Can be localized. OI = OpenIntents should stay unmodified. -->
     <string name="app_name">OI文件管理器</string>
     
     <string name="menu_delete">删除</string>
@@ -57,13 +48,11 @@
     <string name="warning_some_may_not_work">下列选项中的某些可能不起作用。</string>
     <string name="show_warning_again">再次显示警告</string>
     
-    <!-- Strings for a multi select feature -->
 	<string name="really_delete_multiselect">确定要删除文件%d？</string>
 
     <string name="multiselect_title">选择多个文件</string>
     <string name="pick_title">File picker</string>
-    
-    <!-- Strings for details table -->
+
     <string name="details_type">类型</string>
     <string name="details_type_folder">文件夹</string>
     <string name="details_type_file">文件</string>
@@ -75,10 +64,8 @@
     <string name="details_yes">是</string>
     <string name="details_no">否</string>
     
-    <!-- Construct a unique file name of a file called %s. -->
     <string name="copied_file_name">%s的副本</string>
     
-    <!-- Construct a unique file name with number %1$d of a file called %2$s. -->
     <string name="copied_file_name_2">%2$s的副本%1$d</string>
     
     <string name="media_scan_included">该文件夹将包含在下次媒体扫描中。</string>
@@ -91,13 +78,7 @@
     
     <string name="application_not_available">应用程序不可用</string>
     
-	<!-- ***************************
-	     Preferences
-	     *************************** -->
-    <!-- Menu item for Settings -->
 	<string name="settings">设置</string>
-	
-    <!-- Category for preferences. -->
     <string name="preference_advanced_features">高级功能</string>
 	<string name="preference_mediascan_title">从媒体扫描中排除</string>
     <string name="preference_mediascan_summary_on">显示用于在媒体扫描中排除文件夹的菜单项。</string>
@@ -122,17 +103,10 @@
         <item>上次修改</item>
     </string-array>
 
-        
-    <!-- ***************************
-   		 Strings for the \'Save as\' feature
-    	 *************************** -->
+
     <string name="saveas_no_file_picked">你没有选择任何文件。</string>
     <string name="saveas_error">发生错误。</string>
     <string name="saveas_file_saved">文件保存成功！</string>
-    
-    <!-- ***************************
-             Strings for the \'Compressing\' and \'Extracting\' feature
-          *************************** -->
     <string name="compressing_success">项目压缩完成</string>
     <string name="compressing_error">无法压缩该项目</string>
     <string name="extracting_success">项目解压成功</string>
@@ -140,7 +114,6 @@
     <string name="extracting">正在解压…</string>
     <string name="compressing">正在压缩…</string>
     
-    <!-- new menu strings -->
     <string name="menu_bookmarks">书签</string>
     <string name="menu_search">搜索</string>
     <string name="menu_create_folder">创建新文件</string>
@@ -155,7 +128,6 @@
     <string name="menu_check_all">全选</string>
     <string name="menu_uncheck_all">全部不选</string>
     
-    <!-- Multi selection action strings -->
     <string name="selected">已选中</string>
     <string name="no_selection">没有选中项</string>
     
@@ -163,8 +135,7 @@
     <string name="bookmark_added">书签已添加</string>
     <string name="bookmark_already_exists">该文件已添加过书签。</string>
     <string name="bookmarks">书签</string>
-    
-    <!-- Search related -->
+
     <string name="search_hint">搜索文件</string>
     <string name="query_error">请求错误</string>
     <string name="search_settings_descr">Files and folders in storage</string>
@@ -173,13 +144,9 @@
     <string name="preference_search_dialog_message">Clear search history?</string>
     <string name="search_history_cleared">Search history cleared</string>
     
-    <!-- icon content description -->
     <string name="item_icon">Item icon</string>
-    
-    <!-- list layout -->
     <string name="file_scanning">正在扫描…</string>
     
-    <!-- Dialogs -->
     <string name="delete_success">已成功删除</string>
     <string name="delete_failure">部分文件未删除</string>
     <string name="deleting">正在删除…</string>
@@ -194,7 +161,6 @@
     
     <string name="directory_pick">Select current directory</string>
     
-    <!-- CopyHelper statuses -->
     <string name="copying">正在复制…</string>
     <string name="copied">已成功复制</string>
     <string name="copy_error">部分文件无法复制</string>
@@ -211,7 +177,7 @@
     </plurals>
     <plurals name="clipboard_info_items_to_move">
         <item quantity="one">%1$d 项将被移动</item>
-        <item quantity="other">%1$d 项将被移动</item>
+        <item quantity="other">%1$d 项将被移动</item>    
     </plurals>
-
+    <string name="paste">粘贴</string>
 </resources>
