--- a/FileManager/res/values-zh-rTW/strings.xml
+++ b/FileManager/res/values-zh-rTW/strings.xml
@@ -15,24 +15,16 @@
  * limitations under the License.
  -->
 <resources>
-	<!-- ***************************
-	     About information
-	     *************************** -->
-	
-	<!-- Automatically filled in by Launchpad: -->
+
 	<string name="about_translators">Launchpad Contributions:
   Li Shiyi https://launchpad.net/~li3shiyi
   OpenIntents devs https://launchpad.net/~openintents-devs
   Swandle https://launchpad.net/~swandle
   zhangchun https://launchpad.net/~zhangchun</string>
-	
-    <!-- Short explanation of the application (max. 80 characters) -->
+
     <string name="about_comments">OI檔案管理員用來管理SD卡上的文件。</string>  
 	
-	<!-- ***************************
-	     Applicatio-specific strings
-	     *************************** -->
-	<!-- Name of application. Can be localized. OI = OpenIntents should stay unmodified. -->
+
     <string name="app_name">OI檔案管理員</string>
     
     <string name="menu_delete">刪除</string>
@@ -56,14 +48,12 @@
     <string name="title_warning_some_may_not_work">警告</string>
     <string name="warning_some_may_not_work">下列選項中的某些可能不起作用。</string>
     <string name="show_warning_again">再次顯示警告</string>
-    
-    <!-- Strings for a multi select feature -->
+
 	<string name="really_delete_multiselect">確定要刪除檔%d？</string>
 
     <string name="multiselect_title">選擇多個檔</string>
     <string name="pick_title">File picker</string>
     
-    <!-- Strings for details table -->
     <string name="details_type">類型</string>
     <string name="details_type_folder">資料夾</string>
     <string name="details_type_file">文件</string>
@@ -75,10 +65,8 @@
     <string name="details_yes">是</string>
     <string name="details_no">否</string>
     
-    <!-- Construct a unique file name of a file called %s. -->
     <string name="copied_file_name">%s的副本</string>
     
-    <!-- Construct a unique file name with number %1$d of a file called %2$s. -->
     <string name="copied_file_name_2">%2$s的副本%1$d</string>
     
     <string name="media_scan_included">該資料夾將包含在下次媒體掃描中。</string>
@@ -91,13 +79,9 @@
     
     <string name="application_not_available">應用程式不可用</string>
     
-	<!-- ***************************
-	     Preferences
-	     *************************** -->
-    <!-- Menu item for Settings -->
+
 	<string name="settings">設置</string>
 	
-    <!-- Category for preferences. -->
     <string name="preference_advanced_features">高級功能</string>
 	<string name="preference_mediascan_title">從媒體掃描中排除</string>
     <string name="preference_mediascan_summary_on">顯示用於在媒體掃描中排除資料夾的功能表項目。</string>
@@ -122,25 +106,17 @@
         <item>上次修改</item>
     </string-array>
 
-        
-    <!-- ***************************
-   		 Strings for the \'Save as\' feature
-    	 *************************** -->
     <string name="saveas_no_file_picked">你沒有選擇任何檔。</string>
     <string name="saveas_error">發生錯誤。</string>
     <string name="saveas_file_saved">檔保存成功！</string>
     
-    <!-- ***************************
-             Strings for the \'Compressing\' and \'Extracting\' feature
-          *************************** -->
     <string name="compressing_success">項目壓縮完成</string>
     <string name="compressing_error">無法壓縮該專案</string>
     <string name="extracting_success">專案解壓成功</string>
     <string name="extracting_error">無法解壓該項目</string>
     <string name="extracting">正在解壓…</string>
     <string name="compressing">正在壓縮…</string>
-    
-    <!-- new menu strings -->
+
     <string name="menu_bookmarks">書簽</string>
     <string name="menu_search">搜索</string>
     <string name="menu_create_folder">創建新文件</string>
@@ -148,14 +124,12 @@
     <string name="menu_multiselect">多選</string>
     <string name="menu_settings">設置</string>
     
-
     <string name="menu_create_shortcut">創建快捷方式</string>
     <string name="send_chooser_title">選擇使用:</string>
     
     <string name="menu_check_all">全選</string>
     <string name="menu_uncheck_all">全部不選</string>
     
-    <!-- Multi selection action strings -->
     <string name="selected">已選中</string>
     <string name="no_selection">沒有選中項</string>
     
@@ -164,7 +138,6 @@
     <string name="bookmark_already_exists">該檔已添加過書簽。</string>
     <string name="bookmarks">書簽</string>
     
-    <!-- Search related -->
     <string name="search_hint">搜索文件</string>
     <string name="query_error">請求錯誤</string>
     <string name="search_settings_descr">Files and folders in storage</string>
@@ -172,14 +145,11 @@
     <string name="preference_search_category">搜索</string>
     <string name="preference_search_dialog_message">Clear search history?</string>
     <string name="search_history_cleared">Search history cleared</string>
-    
-    <!-- icon content description -->
+
     <string name="item_icon">Item icon</string>
     
-    <!-- list layout -->
     <string name="file_scanning">正在掃描…</string>
-    
-    <!-- Dialogs -->
+
     <string name="delete_success">已成功刪除</string>
     <string name="delete_failure">部分檔未刪除</string>
     <string name="deleting">正在刪除…</string>
@@ -194,7 +164,6 @@
     
     <string name="directory_pick">Select current directory</string>
     
-    <!-- CopyHelper statuses -->
     <string name="copying">正在複製…</string>
     <string name="copied">已成功複製</string>
     <string name="copy_error">部分檔無法複製</string>
@@ -213,5 +182,5 @@
         <item quantity="one">%1$d 項將被移動</item>
         <item quantity="other">%1$d 項將被移動</item>
     </plurals>
-
+    <string name="paste">粘貼</string>
 </resources>
