--- a/FileManager/res/values/strings.xml
+++ b/FileManager/res/values/strings.xml
@@ -18,27 +18,10 @@
 -->
 <resources>
 
-    <!--
-         ***************************
-	     About information
-	     ***************************
-
-    -->
-
-
-    <!-- Automatically filled in by Launchpad: -->
     <string name="about_translators">translator-credits</string>
-
-    <!-- Short explanation of the application (max. 80 characters) -->
     <string name="about_comments">Manage files on the SD card with OI File Manager.</string>
 
-    <!--
-         ***************************
-	     Applicatio-specific strings
-	     ***************************
-
-    -->
-    <!-- Name of application. Can be localized. OI = OpenIntents should stay unmodified. -->
+   
     <string name="app_name">OI File Manager</string>
     <string name="menu_delete">Delete</string>
     <string name="menu_rename">Rename</string>
@@ -61,12 +44,10 @@
     <string name="warning_some_may_not_work">Some of the following options may not work.</string>
     <string name="show_warning_again">Show warning again</string>
 
-    <!-- Strings for a multi select feature -->
     <string name="really_delete_multiselect">Do you really want to delete %d files?</string>
     <string name="multiselect_title">Select multiple files</string>
     <string name="pick_title">File picker</string>
 
-    <!-- Strings for details table -->
     <string name="details_type">Type</string>
     <string name="details_type_folder">Folder</string>
     <string name="details_type_file">File</string>
@@ -77,11 +58,8 @@
     <string name="details_lastmodified">Last Modified</string>
     <string name="details_yes">Yes</string>
     <string name="details_no">No</string>
-
-    <!-- Construct a unique file name of a file called %s. -->
     <string name="copied_file_name">Copy of %s</string>
 
-    <!-- Construct a unique file name with number %1$d of a file called %2$s. -->
     <string name="copied_file_name_2">Copy %1$d of %2$s</string>
     <string name="media_scan_included">This folder will be included in the next media scan.</string>
     <string name="media_scan_excluded">This folder will be excluded during the next media scan.</string>
@@ -90,16 +68,7 @@
     <string name="send_not_available">No application available for sending.</string>
     <string name="application_not_available">Application not available</string>
 
-    <!--
-         ***************************
-	     Preferences
-	     ***************************
-
-    -->
-    <!-- Menu item for Settings -->
     <string name="settings">Settings</string>
-
-    <!-- Category for preferences. -->
     <string name="preference_advanced_features">Advanced features</string>
     <string name="preference_mediascan_title">Exclude from media scan</string>
     <string name="preference_mediascan_summary_on">Show menu item to exclude folders from media scan.</string>
@@ -127,30 +96,16 @@
     <string name="preference_usedarktheme_summary_on">Dark theme selected</string>
     <string name="preference_usedarktheme_summary_off">Light theme selected</string>
 
-    <!--
-         ***************************
-   		 Strings for the 'Save as' feature
-    	 ***************************
-
-    -->
     <string name="saveas_no_file_picked">You haven\'t picked any file.</string>
     <string name="saveas_error">An error occured.</string>
     <string name="saveas_file_saved">File successfully saved!</string>
 
-    <!--
-         ***************************
-             Strings for the 'Compressing' and 'Extracting' feature
-          ***************************
-
-    -->
     <string name="compressing_success">Item compressed successfully</string>
     <string name="compressing_error">Could not compress the item</string>
     <string name="extracting_success">Item extracted successfully</string>
     <string name="extracting_error">Could not extract the item</string>
     <string name="extracting">Extracting&#8230;</string>
     <string name="compressing">Compressing&#8230;</string>
-
-    <!-- new menu strings -->
     <string name="menu_bookmarks">Bookmarks</string>
     <string name="menu_search">Search</string>
     <string name="menu_create_folder">Create folder</string>
@@ -163,8 +118,6 @@
     <string name="send_chooser_title">Send using:</string>
     <string name="menu_check_all">Check all</string>
     <string name="menu_uncheck_all">Uncheck all</string>
-
-    <!-- Multi selection action strings -->
     <string name="selected">selected</string>
     <string name="no_selection">No items checked</string>
     <string name="bookmark_empty">No bookmarks added.</string>
@@ -172,7 +125,6 @@
     <string name="bookmark_already_exists">This file is already bookmarked</string>
     <string name="bookmarks">Bookmarks</string>
 
-    <!-- Search related -->
     <string name="search_hint">Search files</string>
     <string name="query_error">Query error</string>
     <string name="search_settings_descr">Files and folders in storage</string>
@@ -181,13 +133,9 @@
     <string name="preference_search_dialog_message">Clear search history?</string>
     <string name="search_history_cleared">Search history cleared</string>
 
-    <!-- icon content description -->
     <string name="item_icon">Item icon</string>
-
-    <!-- list layout -->
     <string name="file_scanning">Scanning&#8230;</string>
 
-    <!-- Dialogs -->
     <string name="delete_success">Successfully deleted</string>
     <string name="delete_failure">Some files not deleted</string>
     <string name="deleting">Deleting&#8230;</string>
@@ -203,8 +151,6 @@
     <string name="filename_hint">File name</string>
     <string name="choose_filename">File name can\'t be empty!</string>
     <string name="pick_button_default">Pick file</string>
-
-    <!-- CopyHelper statuses -->
     <string name="copying">Copying&#8230;</string>
     <string name="copied">Successfully copied</string>
     <string name="copy_error">Some or all items couldn\'t be copied!</string>
@@ -227,5 +173,7 @@
     <string name="preference_usebestmatch_title">Use best app for icons</string>
     <string name="preference_usebestmatch_summary_off">use most recently installed app</string>
     <string name="preference_usebestmatch_summary_on">use most suitable app</string>
-
+    
+    <string name="paste">Paste</string>
+  
 </resources>
